[package]
name = "bookshelf"
version = "0.1.0"
edition = "2021"
default-run = "bookshelf"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.11.1"
axum = "0.6.10"
fake = "2.5.0"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1.26.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
